--- a/new.ini
+++ b/new.ini
@@ -1,2 +1,5 @@
 [custom]
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/superBiuBiuMan/clash-rules-lite/main/yourlist.list
+ruleset=InfiniPort,https://raw.githubusercontent.com/superBiuBiuMan/clash-rules-lite/main/yourlist.list
+
+enable_rule_generator=true
+overwrite_original_rules=false
